<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Movies.MoviesActivity">
    <item
        android:id="@+id/shortmenu"
        android:title="@string/sortmenu"
        app:showAsAction="never"
        android:orderInCategory="1">
    <menu>
        <item
            android:title="@string/popular"
            android:id="@+id/menu_srt_by_popular"
            app:showAsAction="ifRoom"
            android:orderInCategory="1"/>
        <item
            android:id="@+id/menu_srt_by_top_rated"
            android:title="@string/top_rated"
            app:showAsAction="ifRoom"
            android:orderInCategory="2"/>
        <item
            android:id="@+id/menu_srt_by_upcoming"
            android:title="@string/upcoming"
            app:showAsAction="ifRoom"
            android:orderInCategory="3"/>
    </menu>
    </item>
    <item
        android:id="@+id/menu_favorite"
        android:title="@string/menu_favorite"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_name"/>


</menu>